test/mpi/errors/coll/.cvsignore
noalias
Makefile.in
Makefile
*.o
*.vcproj
Debug*
Release*
!
